--- a/apps/inventory/src/main/resources/application.properties
+++ b/apps/inventory/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=inventory
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_inventory
-spring.datasource.username=root_prueba
-spring.datasource.password=Abcd1234
+spring.application.name=${SPRING_APPLICATION_NAME}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-server.port=8080
+server.port=${SERVER_PORT:8080}
