feat: Update Docker configurations and SQL initialization scripts for inventory and product services

--- a/apps/inventory/Dockerfile
+++ b/apps/inventory/Dockerfile
@@ -1,22 +1,26 @@
-# Etapa de build
+# Usa una imagen base de Maven con OpenJDK
 FROM maven:3.8.5-openjdk-17 AS builder
 
+# Establece el directorio de trabajo
 WORKDIR /app
 
-# Copiar solo los archivos necesarios para instalar dependencias y cachear las capas de Maven
-COPY pom.xml .
-COPY src ./src
+# Copia los archivos del proyecto al contenedor
+COPY . .
 
-# Compilar y empaquetar sin pruebas
+# Construye el proyecto y omite los tests (si es necesario)
 RUN mvn clean package -DskipTests
 
-# Etapa final: runtime
+# Etapa final para ejecutar la aplicación
 FROM openjdk:17-jdk-slim
 
+# Establece el directorio de trabajo
 WORKDIR /app
 
-# Copiar el jar generado de la etapa builder
-COPY --from=builder /app/target/*.jar app.jar
+# Copia el archivo .jar generado desde la etapa builder
+COPY --from=builder /app/target/*.jar /app/app.jar
 
-# Ejecutar la aplicación
-ENTRYPOINT ["java", "-jar", "app.jar"]
+# Expone el puerto que Spring Boot usará
+EXPOSE 8080
+
+# Comando para ejecutar el archivo .jar
+CMD ["java", "-jar", "/app/app.jar"]
