--- a/apps/inventory/src/main/resources/application.properties
+++ b/apps/inventory/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 server.port=${SERVER_PORT:8080}
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
